Toolbar items and icons stacked and clipped #105885

Closed
opened 2023-03-18 21:13:18 +01:00 by Hans Goudey · 4 comments
Member

System Information
Operating system: Linux-6.1.14-200.fc37.x86_64-x86_64-with-glibc2.36 64 Bits
Graphics card: Mesa Intel(R) UHD Graphics 620 (KBL GT2) Intel 4.6 (Core Profile) Mesa 22.3.7

Blender Version
Broken: version: 3.6.0 Alpha, latest main
Worked: 3.5

Short description of error
image

Exact steps for others to reproduce the error
Open Blender. I'm using a high-dpi screen, that could be related.

**System Information** Operating system: Linux-6.1.14-200.fc37.x86_64-x86_64-with-glibc2.36 64 Bits Graphics card: Mesa Intel(R) UHD Graphics 620 (KBL GT2) Intel 4.6 (Core Profile) Mesa 22.3.7 **Blender Version** Broken: version: 3.6.0 Alpha, latest `main` Worked: 3.5 **Short description of error** ![image](/attachments/65cb14d6-9e25-4fab-b849-15d814211f0f) **Exact steps for others to reproduce the error** Open Blender. I'm using a high-dpi screen, that could be related.
Hans Goudey added the
Priority
Normal
Module
User Interface
Status
Needs Triage
Type
Report
labels 2023-03-18 21:13:19 +01:00
Hans Goudey changed title from Toolbar affected by to Toolbar icons stacked and clipped 2023-03-18 21:13:39 +01:00
Hans Goudey changed title from Toolbar icons stacked and clipped to Toolbar items and icons stacked and clipped 2023-03-18 21:13:48 +01:00

I can confirm the exact same issue on macOS Big Sur since 3.6.0 Main 3eff28a158, but not on the 3.5 Beta 73509d1bc1, from the same date.

PS: I also suspect it might be related to high dpi display, because it happens on MacBook Pro (Intel) on Big Sur with Retina display, and not on Mac Pro on Monterey with regular display.

I can confirm the exact same issue on macOS Big Sur since 3.6.0 Main 3eff28a158ca, but not on the 3.5 Beta 73509d1bc1cb, from the same date. PS: I also suspect it might be related to high dpi display, because it happens on MacBook Pro (Intel) on Big Sur with **Retina display**, and **not** on Mac Pro on Monterey with regular display.

Confirmed here as well on a high-dpi Windows display - 4k, 200% OS scale, 100% Blender scale.

Bisect points to f78f05c749
CC @Harley

Also of note is that this changes the behavior of python addons wrt text size and positioning (used to work fine across displays and scaling factors):
scaleissue.png

Confirmed here as well on a high-dpi Windows display - 4k, 200% OS scale, 100% Blender scale. Bisect points to f78f05c7495cce5d7aa9e6bbe2c22b4041d8a16b CC @Harley Also of note is that this changes the behavior of python addons wrt text size and positioning (used to work fine across displays and scaling factors): ![scaleissue.png](/attachments/9f647b98-0154-4bb1-b60b-30e7ea6cfc2c)
Jesse Yurkovich added
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Triage
labels 2023-03-19 01:30:05 +01:00
Harley Acheson self-assigned this 2023-03-19 01:43:19 +01:00
Member

That commit, f78f05c749,, should be nothing but a renaming without any changes of behavior. So I've probably missed something, misnamed something, or otherwise screwed something up. Will take a look fairly quickly.

That commit, https://projects.blender.org/blender/blender/commit/f78f05c7495cce5d7aa9e6bbe2c22b4041d8a16b,, should be nothing but a renaming without any changes of behavior. So I've probably missed something, misnamed something, or otherwise screwed something up. Will take a look fairly quickly.

I noticed it too when starting Blender, will commit fix.

I noticed it too when starting Blender, will commit fix.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-19 10:12:36 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105885
No description provided.