Fix #105885: toolbar items overlapping, after recent refactor

The RNA property was not mapped to the right new DNA member.